--- a/UEFA_Euro_2024.ipynb
+++ b/UEFA_Euro_2024.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOK8O1b3SEHTjBpwAT5FeXI",
+      "authorship_tag": "ABX9TyPTWfnncmRJ/Pwq8BryPnWd",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2985,6 +2985,397 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# **Match Outcome Analysis:**"
+      ],
+      "metadata": {
+        "id": "0TUS5RTTpSWf"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Win, Loss, Draw: Determine the outcome of each match and analyze win/loss/draw patterns."
+      ],
+      "metadata": {
+        "id": "5DjsprLtpdPg"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "matches['match_outcome'] =matches.apply(lambda row: 'team1_win' if row['team1_goals'] > row['team2_goals'] else ('team2_win' if row['team1_goals'] < row['team2_goals'] else 'draw'), axis=1)\n",
+        "outcomes_count = matches['match_outcome'].value_counts()\n",
+        "matches.head(2)"
+      ],
+      "metadata": {
+        "id": "egXc6tlxpRby",
+        "outputId": "5c2602ad-d898-4e36-c3f3-329b05343ad3",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 213
+        }
+      },
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "     team1        team2              stadium  team1_goals  team2_goals  \\\n",
+              "0  Germany     Scotland  Fuball Arena Mnchen            5            1   \n",
+              "1  Hungary  Switzerland      Cologne Stadium            1            3   \n",
+              "\n",
+              "   audience  team1_total_shots  team1_shots_on_target  team2_total_shots  \\\n",
+              "0     65052                 20                     10                  1   \n",
+              "1     41676                  6                      2                 15   \n",
+              "\n",
+              "   team2_shots_on_target  ...  team2_tackles_won  team2_interceptions  \\\n",
+              "0                      0  ...             8(53%)                    6   \n",
+              "1                      7  ...             9(69%)                    6   \n",
+              "\n",
+              "   team2_blocks  team2_clearances team2_keeper_saves team2_duels_won  \\\n",
+              "0             5                22                  5              41   \n",
+              "1             1                17                  1              41   \n",
+              "\n",
+              "  team2_successful_dribbles  team1_shot_accuracy  team2_shot_accuracy  \\\n",
+              "0                    5(56%)             0.500000             0.000000   \n",
+              "1                    5(38%)             0.333333             0.466667   \n",
+              "\n",
+              "   match_outcome  \n",
+              "0      team1_win  \n",
+              "1      team2_win  \n",
+              "\n",
+              "[2 rows x 49 columns]"
+            ],
+            "text/html": [
+              "\n",
+              "  <div id=\"df-ca7f6e41-0b72-4b76-8f54-93709882ae5e\" class=\"colab-df-container\">\n",
+              "    <div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>team1</th>\n",
+              "      <th>team2</th>\n",
+              "      <th>stadium</th>\n",
+              "      <th>team1_goals</th>\n",
+              "      <th>team2_goals</th>\n",
+              "      <th>audience</th>\n",
+              "      <th>team1_total_shots</th>\n",
+              "      <th>team1_shots_on_target</th>\n",
+              "      <th>team2_total_shots</th>\n",
+              "      <th>team2_shots_on_target</th>\n",
+              "      <th>...</th>\n",
+              "      <th>team2_tackles_won</th>\n",
+              "      <th>team2_interceptions</th>\n",
+              "      <th>team2_blocks</th>\n",
+              "      <th>team2_clearances</th>\n",
+              "      <th>team2_keeper_saves</th>\n",
+              "      <th>team2_duels_won</th>\n",
+              "      <th>team2_successful_dribbles</th>\n",
+              "      <th>team1_shot_accuracy</th>\n",
+              "      <th>team2_shot_accuracy</th>\n",
+              "      <th>match_outcome</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>Germany</td>\n",
+              "      <td>Scotland</td>\n",
+              "      <td>Fuball Arena Mnchen</td>\n",
+              "      <td>5</td>\n",
+              "      <td>1</td>\n",
+              "      <td>65052</td>\n",
+              "      <td>20</td>\n",
+              "      <td>10</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>...</td>\n",
+              "      <td>8(53%)</td>\n",
+              "      <td>6</td>\n",
+              "      <td>5</td>\n",
+              "      <td>22</td>\n",
+              "      <td>5</td>\n",
+              "      <td>41</td>\n",
+              "      <td>5(56%)</td>\n",
+              "      <td>0.500000</td>\n",
+              "      <td>0.000000</td>\n",
+              "      <td>team1_win</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>Hungary</td>\n",
+              "      <td>Switzerland</td>\n",
+              "      <td>Cologne Stadium</td>\n",
+              "      <td>1</td>\n",
+              "      <td>3</td>\n",
+              "      <td>41676</td>\n",
+              "      <td>6</td>\n",
+              "      <td>2</td>\n",
+              "      <td>15</td>\n",
+              "      <td>7</td>\n",
+              "      <td>...</td>\n",
+              "      <td>9(69%)</td>\n",
+              "      <td>6</td>\n",
+              "      <td>1</td>\n",
+              "      <td>17</td>\n",
+              "      <td>1</td>\n",
+              "      <td>41</td>\n",
+              "      <td>5(38%)</td>\n",
+              "      <td>0.333333</td>\n",
+              "      <td>0.466667</td>\n",
+              "      <td>team2_win</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "<p>2 rows × 49 columns</p>\n",
+              "</div>\n",
+              "    <div class=\"colab-df-buttons\">\n",
+              "\n",
+              "  <div class=\"colab-df-container\">\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-ca7f6e41-0b72-4b76-8f54-93709882ae5e')\"\n",
+              "            title=\"Convert this dataframe to an interactive table.\"\n",
+              "            style=\"display:none;\">\n",
+              "\n",
+              "  <svg xmlns=\"http://www.w3.org/2000/svg\" height=\"24px\" viewBox=\"0 -960 960 960\">\n",
+              "    <path d=\"M120-120v-720h720v720H120Zm60-500h600v-160H180v160Zm220 220h160v-160H400v160Zm0 220h160v-160H400v160ZM180-400h160v-160H180v160Zm440 0h160v-160H620v160ZM180-180h160v-160H180v160Zm440 0h160v-160H620v160Z\"/>\n",
+              "  </svg>\n",
+              "    </button>\n",
+              "\n",
+              "  <style>\n",
+              "    .colab-df-container {\n",
+              "      display:flex;\n",
+              "      gap: 12px;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-convert {\n",
+              "      background-color: #E8F0FE;\n",
+              "      border: none;\n",
+              "      border-radius: 50%;\n",
+              "      cursor: pointer;\n",
+              "      display: none;\n",
+              "      fill: #1967D2;\n",
+              "      height: 32px;\n",
+              "      padding: 0 0 0 0;\n",
+              "      width: 32px;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-convert:hover {\n",
+              "      background-color: #E2EBFA;\n",
+              "      box-shadow: 0px 1px 2px rgba(60, 64, 67, 0.3), 0px 1px 3px 1px rgba(60, 64, 67, 0.15);\n",
+              "      fill: #174EA6;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-buttons div {\n",
+              "      margin-bottom: 4px;\n",
+              "    }\n",
+              "\n",
+              "    [theme=dark] .colab-df-convert {\n",
+              "      background-color: #3B4455;\n",
+              "      fill: #D2E3FC;\n",
+              "    }\n",
+              "\n",
+              "    [theme=dark] .colab-df-convert:hover {\n",
+              "      background-color: #434B5C;\n",
+              "      box-shadow: 0px 1px 3px 1px rgba(0, 0, 0, 0.15);\n",
+              "      filter: drop-shadow(0px 1px 2px rgba(0, 0, 0, 0.3));\n",
+              "      fill: #FFFFFF;\n",
+              "    }\n",
+              "  </style>\n",
+              "\n",
+              "    <script>\n",
+              "      const buttonEl =\n",
+              "        document.querySelector('#df-ca7f6e41-0b72-4b76-8f54-93709882ae5e button.colab-df-convert');\n",
+              "      buttonEl.style.display =\n",
+              "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
+              "\n",
+              "      async function convertToInteractive(key) {\n",
+              "        const element = document.querySelector('#df-ca7f6e41-0b72-4b76-8f54-93709882ae5e');\n",
+              "        const dataTable =\n",
+              "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
+              "                                                    [key], {});\n",
+              "        if (!dataTable) return;\n",
+              "\n",
+              "        const docLinkHtml = 'Like what you see? Visit the ' +\n",
+              "          '<a target=\"_blank\" href=https://colab.research.google.com/notebooks/data_table.ipynb>data table notebook</a>'\n",
+              "          + ' to learn more about interactive tables.';\n",
+              "        element.innerHTML = '';\n",
+              "        dataTable['output_type'] = 'display_data';\n",
+              "        await google.colab.output.renderOutput(dataTable, element);\n",
+              "        const docLink = document.createElement('div');\n",
+              "        docLink.innerHTML = docLinkHtml;\n",
+              "        element.appendChild(docLink);\n",
+              "      }\n",
+              "    </script>\n",
+              "  </div>\n",
+              "\n",
+              "\n",
+              "<div id=\"df-504bdfcb-fd41-41e8-8580-d72ba9c50dc6\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-504bdfcb-fd41-41e8-8580-d72ba9c50dc6')\"\n",
+              "            title=\"Suggest charts\"\n",
+              "            style=\"display:none;\">\n",
+              "\n",
+              "<svg xmlns=\"http://www.w3.org/2000/svg\" height=\"24px\"viewBox=\"0 0 24 24\"\n",
+              "     width=\"24px\">\n",
+              "    <g>\n",
+              "        <path d=\"M19 3H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zM9 17H7v-7h2v7zm4 0h-2V7h2v10zm4 0h-2v-4h2v4z\"/>\n",
+              "    </g>\n",
+              "</svg>\n",
+              "  </button>\n",
+              "\n",
+              "<style>\n",
+              "  .colab-df-quickchart {\n",
+              "      --bg-color: #E8F0FE;\n",
+              "      --fill-color: #1967D2;\n",
+              "      --hover-bg-color: #E2EBFA;\n",
+              "      --hover-fill-color: #174EA6;\n",
+              "      --disabled-fill-color: #AAA;\n",
+              "      --disabled-bg-color: #DDD;\n",
+              "  }\n",
+              "\n",
+              "  [theme=dark] .colab-df-quickchart {\n",
+              "      --bg-color: #3B4455;\n",
+              "      --fill-color: #D2E3FC;\n",
+              "      --hover-bg-color: #434B5C;\n",
+              "      --hover-fill-color: #FFFFFF;\n",
+              "      --disabled-bg-color: #3B4455;\n",
+              "      --disabled-fill-color: #666;\n",
+              "  }\n",
+              "\n",
+              "  .colab-df-quickchart {\n",
+              "    background-color: var(--bg-color);\n",
+              "    border: none;\n",
+              "    border-radius: 50%;\n",
+              "    cursor: pointer;\n",
+              "    display: none;\n",
+              "    fill: var(--fill-color);\n",
+              "    height: 32px;\n",
+              "    padding: 0;\n",
+              "    width: 32px;\n",
+              "  }\n",
+              "\n",
+              "  .colab-df-quickchart:hover {\n",
+              "    background-color: var(--hover-bg-color);\n",
+              "    box-shadow: 0 1px 2px rgba(60, 64, 67, 0.3), 0 1px 3px 1px rgba(60, 64, 67, 0.15);\n",
+              "    fill: var(--button-hover-fill-color);\n",
+              "  }\n",
+              "\n",
+              "  .colab-df-quickchart-complete:disabled,\n",
+              "  .colab-df-quickchart-complete:disabled:hover {\n",
+              "    background-color: var(--disabled-bg-color);\n",
+              "    fill: var(--disabled-fill-color);\n",
+              "    box-shadow: none;\n",
+              "  }\n",
+              "\n",
+              "  .colab-df-spinner {\n",
+              "    border: 2px solid var(--fill-color);\n",
+              "    border-color: transparent;\n",
+              "    border-bottom-color: var(--fill-color);\n",
+              "    animation:\n",
+              "      spin 1s steps(1) infinite;\n",
+              "  }\n",
+              "\n",
+              "  @keyframes spin {\n",
+              "    0% {\n",
+              "      border-color: transparent;\n",
+              "      border-bottom-color: var(--fill-color);\n",
+              "      border-left-color: var(--fill-color);\n",
+              "    }\n",
+              "    20% {\n",
+              "      border-color: transparent;\n",
+              "      border-left-color: var(--fill-color);\n",
+              "      border-top-color: var(--fill-color);\n",
+              "    }\n",
+              "    30% {\n",
+              "      border-color: transparent;\n",
+              "      border-left-color: var(--fill-color);\n",
+              "      border-top-color: var(--fill-color);\n",
+              "      border-right-color: var(--fill-color);\n",
+              "    }\n",
+              "    40% {\n",
+              "      border-color: transparent;\n",
+              "      border-right-color: var(--fill-color);\n",
+              "      border-top-color: var(--fill-color);\n",
+              "    }\n",
+              "    60% {\n",
+              "      border-color: transparent;\n",
+              "      border-right-color: var(--fill-color);\n",
+              "    }\n",
+              "    80% {\n",
+              "      border-color: transparent;\n",
+              "      border-right-color: var(--fill-color);\n",
+              "      border-bottom-color: var(--fill-color);\n",
+              "    }\n",
+              "    90% {\n",
+              "      border-color: transparent;\n",
+              "      border-bottom-color: var(--fill-color);\n",
+              "    }\n",
+              "  }\n",
+              "</style>\n",
+              "\n",
+              "  <script>\n",
+              "    async function quickchart(key) {\n",
+              "      const quickchartButtonEl =\n",
+              "        document.querySelector('#' + key + ' button');\n",
+              "      quickchartButtonEl.disabled = true;  // To prevent multiple clicks.\n",
+              "      quickchartButtonEl.classList.add('colab-df-spinner');\n",
+              "      try {\n",
+              "        const charts = await google.colab.kernel.invokeFunction(\n",
+              "            'suggestCharts', [key], {});\n",
+              "      } catch (error) {\n",
+              "        console.error('Error during call to suggestCharts:', error);\n",
+              "      }\n",
+              "      quickchartButtonEl.classList.remove('colab-df-spinner');\n",
+              "      quickchartButtonEl.classList.add('colab-df-quickchart-complete');\n",
+              "    }\n",
+              "    (() => {\n",
+              "      let quickchartButtonEl =\n",
+              "        document.querySelector('#df-504bdfcb-fd41-41e8-8580-d72ba9c50dc6 button');\n",
+              "      quickchartButtonEl.style.display =\n",
+              "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
+              "    })();\n",
+              "  </script>\n",
+              "</div>\n",
+              "\n",
+              "    </div>\n",
+              "  </div>\n"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "dataframe",
+              "variable_name": "matches"
+            }
+          },
+          "metadata": {},
+          "execution_count": 20
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "hRFjED02pOVT"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
