--- a/iris.ipynb
+++ b/iris.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO1nhoURRx3EuZgxHgGkutI",
+      "authorship_tag": "ABX9TyNdhYJUnMTkleYc1eJ0/naC",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -36,15 +36,14 @@
         "import sklearn.metrics\n",
         "from sklearn.model_selection import train_test_split\n",
         "from sklearn.preprocessing import StandardScaler\n",
-        "from sklearn.linear_model import LinearRegression  # Change to 'LinearRegression'\n",
-        "from sklearn.datasets import load_iris\n",
-        "# from pandas.datasets import iris  # Remove duplicate import"
+        "from sklearn.linear_model import LinearRegression\n",
+        "from sklearn.datasets import load_iris\n"
       ],
       "cell_type": "code",
       "metadata": {
         "id": "F3ov3FCKQ3xQ"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -55,7 +54,7 @@
       "metadata": {
         "id": "YZ06UWl0QDnF"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -70,7 +69,7 @@
         "id": "IOs7KybIRJzm",
         "outputId": "7f9831ff-42c7-40d9-d95a-89068cc19975"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -258,7 +257,7 @@
       "metadata": {
         "id": "3Dd6cFFQRuyN"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -274,7 +273,7 @@
         "id": "dmtFZVErR5Fo",
         "outputId": "0d77131b-7a66-4e88-b8e6-9ceb7e2be9e3"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -678,7 +677,7 @@
         "id": "rO0PXA3QR6tj",
         "outputId": "e8c182b6-ba77-4778-abe2-3fd994222096"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -725,7 +724,7 @@
         "id": "sNLn2MYlT_tA",
         "outputId": "0fd996bf-5bf3-4875-bfd0-0f1a4b2b461a"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1047,7 +1046,7 @@
       "metadata": {
         "id": "RWB7gjF1YQo3"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1063,7 +1062,7 @@
         "id": "QwxDhexcY1vs",
         "outputId": "f837cd36-7dfa-4c69-e8cf-263405510dbd"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1481,7 +1480,7 @@
         "id": "FmrOE3smYojN",
         "outputId": "e107f8e4-fb1e-4205-de41-19442aff17d6"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1514,7 +1513,7 @@
       "metadata": {
         "id": "pHZaSNuqYpig"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1529,7 +1528,7 @@
         "id": "-2AY5c4LZvxn",
         "outputId": "55493d6e-4f96-4ea1-80db-02d872ab96f2"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1563,7 +1562,7 @@
         "id": "MGofeJ7CazqB",
         "outputId": "c4274afa-cb68-4aa7-dbe6-cd54a41295be"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1596,7 +1595,7 @@
       "metadata": {
         "id": "vgFcXuZpdpZ1"
       },
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1618,7 +1617,7 @@
         "id": "Vj3_OVOYdq7S",
         "outputId": "5f1cf959-45ef-447a-c489-77c7668da055"
       },
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
