--- a/diabetes.ipynb
+++ b/diabetes.ipynb
@@ -285,6 +285,7 @@
         }
       ],
       "source": [
+        "#libraries\n",
         "import pandas as pd\n",
         "import numpy as np\n",
         "import matplotlib.pyplot as plt\n",
