--- a/anaemia.ipynb
+++ b/anaemia.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP86KtxSKL7oRJU3OAcSH1T",
+      "authorship_tag": "ABX9TyO4BTyBPLB2Vff8eTAIPh4y",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,12 +28,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 33,
+      "execution_count": null,
       "metadata": {
         "id": "G1BpYxVgXroP"
       },
       "outputs": [],
       "source": [
+        "#libraries\n",
         "import pandas as pd\n",
         "import numpy as np\n",
         "import matplotlib.pyplot as plt\n",
@@ -54,7 +55,7 @@
         "id": "6cPmzszHYUL9",
         "outputId": "2d736a77-ab1d-4ebf-a9fd-13285457a373"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -384,7 +385,7 @@
         "id": "JM09WiuGYdph",
         "outputId": "30fe9fdd-5616-44e1-af17-84a8ea6ac29e"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -417,7 +418,7 @@
         "id": "62rYFQgTZr5t",
         "outputId": "122dc155-c2d6-4292-bcdb-90b84a40ef96"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -453,7 +454,7 @@
       "metadata": {
         "id": "dAFoIHgXfe9a"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -469,7 +470,7 @@
         "id": "X1mqVfrzauVU",
         "outputId": "2b274525-ed78-4851-e745-225a1a6c28a6"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -932,7 +933,7 @@
         "id": "E25O2iyGaoNq",
         "outputId": "78e8452d-9d1c-4bec-dcf2-e82e7e4076b1"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -966,7 +967,7 @@
       "metadata": {
         "id": "YkPSh4JCcTrz"
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -981,7 +982,7 @@
         "id": "NYerSf2PhejC",
         "outputId": "7fc66e9c-b082-4747-85a8-e25ba1665eec"
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1036,7 +1037,7 @@
       "metadata": {
         "id": "x0LelCMdhoDQ"
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1051,7 +1052,7 @@
         "id": "o7V1xiilh67a",
         "outputId": "236ead76-fa5e-4299-89da-ee08671d39fe"
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1082,7 +1083,7 @@
       "metadata": {
         "id": "LZaYOjVWjkYg"
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1095,7 +1096,7 @@
       "metadata": {
         "id": "Cso_1-KGjDlG"
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1123,7 +1124,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1152,7 +1153,7 @@
       "metadata": {
         "id": "BEqZV96Wk0h5"
       },
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1168,7 +1169,7 @@
         "id": "FzY7Y6rZoLmZ",
         "outputId": "03a5d470-4f62-426c-fc5f-c8eb1bc59e91"
       },
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1473,7 +1474,7 @@
       "metadata": {
         "id": "HQyj39z6nCGL"
       },
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1484,7 +1485,7 @@
       "metadata": {
         "id": "5vR5Eg1GnWxW"
       },
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1499,7 +1500,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1517,7 +1518,7 @@
       "metadata": {
         "id": "Ozz6Q-Wstnle"
       },
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1526,7 +1527,7 @@
       "metadata": {
         "id": "xOI9J-7YoJbb"
       },
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1538,7 +1539,7 @@
       "metadata": {
         "id": "D_7GryvCqS6g"
       },
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1554,7 +1555,7 @@
         "id": "nbOS216Zop9m",
         "outputId": "b1b01558-64b9-4da0-90fc-0df5325a18aa"
       },
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1577,7 +1578,7 @@
       "metadata": {
         "id": "fr3afDq3o8wD"
       },
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": []
     }
   ]
