--- a/diabetes.ipynb
+++ b/diabetes.ipynb
@@ -1101,6 +1101,7 @@
       },
       "outputs": [],
       "source": [
+        "##treating missing values\n",
         "data['Urea'].fillna(data['Urea'].mean(), inplace=True)\n",
         "data['AGE'].fillna(data['AGE'].mode(), inplace=True)\n",
         "data['Cr'].fillna(data['Cr'].median(), inplace=True)\n",
