--- a/mobile_price_range.ipynb
+++ b/mobile_price_range.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP5n/VaAKw+SE/H3rRzLASV",
+      "authorship_tag": "ABX9TyPn+0cg8JnI/SW6QrGUymFr",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,13 +28,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "bm695jc0u0Vz"
       },
       "outputs": [],
       "source": [
-        "import pandas as pd\n"
+        "import pandas as pd\n",
+        "#"
       ]
     },
     {
@@ -51,7 +52,7 @@
         "id": "QdNXqoySvx_p",
         "outputId": "20b98c8e-6dfb-4d7b-a74c-05de1eec42cb"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -698,7 +699,7 @@
         "id": "2-2n_FiewPLr",
         "outputId": "aef49e05-c212-4a5a-bc29-5b0159d1226c"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -724,7 +725,7 @@
         "id": "P1eGGzm3yNeJ",
         "outputId": "b405227f-33fa-45ba-d4fb-99c097645081"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -754,7 +755,7 @@
         "id": "ckxf42_1yatn",
         "outputId": "81fd9e17-d247-4351-b8fb-646ae1dea868"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -805,7 +806,7 @@
         "id": "qdLhs6Tg1_3v",
         "outputId": "70ecc909-60c5-42ae-cfab-48368786431b"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -964,7 +965,7 @@
         "id": "sm3SlvSy2JON",
         "outputId": "862e56cb-b86e-45ba-9292-74aae18baf62"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
