--- a/monkeypox.ipynb
+++ b/monkeypox.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM8wiPMvc+K4KONwJrttIFP",
+      "authorship_tag": "ABX9TyOH9SxQ5kMcvLqpmW0z2oyS",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -51,6 +51,7 @@
         }
       ],
       "source": [
+        "#libraries\n",
         "import pandas as pd\n",
         "data = pd.read_xlsx('/content/monkeypox_dataset.xlsx')\n"
       ]
