--- a/Weather_dataset.ipynb
+++ b/Weather_dataset.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMNO3Rme42ubxEYw8u6eHkA",
+      "authorship_tag": "ABX9TyMWGOKjf6qNo/pIU5wfqabt",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,7 +34,7 @@
       },
       "outputs": [],
       "source": [
-        "#importing pandas library\n",
+        "#importing pandas libraryy\n",
         "import pandas as pd\n"
       ]
     },
